# Rust-QR-Code-Generator

./: .gitignore  Cargo.toml  README.md
Qr_code/: Cargo.toml
Qr_code/src/: db.rs  main.rs  routes.rs  user_input.rs
server/: Cargo.toml
server/src/: main.rs  qr_generator.rs  routes.rs
src/: main.rs  qr_generator.rs
