[package]
name = "qr-image"
version = "0.1.1"
edition = "2021"
authors = ["Nkwenti-Severian <halamadrid651643565@gmail.com>"]
description = "A simple CLI tool to generate a qr_code image for easy sharing and privately"
repository = "https://github.com/Nkwenti-Severian-Ndongtsop/Rust-QR-Code-Generator.git"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["qr-code", "cli", "image", "generator"]


[dependencies]
image = "0.25.6"
qrcode = "0.14.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }
dirs = "6.0.0"
dotenvy = "0.15.7"